--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.744</string>
-    <string name="version">Version: 1.744</string>
+    <string name="version_code">1.745</string>
+    <string name="version">Version: 1.745</string>
 
     <string name="app_name">Taxi Dostavka</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -93,7 +93,7 @@
     <string name="please_phone_message">The application transmits your mobile phone number to enable the taxi ordering function. By clicking the Save button, you confirm your consent to transfer the phone number to the dispatcher to search for the car and save it for future orders.</string><string name="check_message">Wait, the connection is in progress.</string>
     <string name="find_of_map">Try to find on the map</string>
     <string name="end_point_marker">Destination</string>
-    <string name="error_firebase_start">Validation error. Type operator.</string>
+    <string name="error_firebase_start">Validation error. Dial the operator via "HELP"</string>
     <string name="address_error_message">Error entering address</string>
     <string name="BAGGAGE">Carbon loading</string>
     <string name="ANIMAL">Animal</string>
@@ -151,7 +151,7 @@
     <string name="gps_message">Enable GPS</string> to use the map
     <string name="city">City</string>
     <string name="change_message">"Change of address base. "</string>
-    <string name="server_error_connected">The server did not accept the request, dial operators</string>
+    <string name="server_error_connected">The server did not accept the request. Dial the operator via "HELP"</string>
     <string name="GDPR">GDPR</string>
     <string name="ok_GDPR">Agree</string>
     <string name="Dnipro_city">Dnipro</string>
@@ -355,4 +355,22 @@
     <string name="pay_method_message_card">bank card. Have a nice trip.</string>
     <string name="pay_method_message_nal">cash to the driver. Have a nice trip.</string>
     <string name="location_on">Enable PRECISION location in Permissions</string>
+    <string name="start_t">Start</string>
+    <string name="base_onl_t">Basic online</string>
+    <string name="base_t">Basic</string>
+    <string name="univers_t">Universal</string>
+    <string name="bisnes_t">Business class</string>
+    <string name="prem_t">Premium class</string>
+    <string name="econom_t">Economy class</string>
+    <string name="bus_t">Minibus</string>
+    <string name="pending">The payment has been sent for review. Try another card or try again later.</string>
+    <string name="pending_error">Failed to make payment. Please try the payment again later or contact the merchant to whose address you are making the payment.</string>
+    <string name="pending_error_0">The payment time has expired, please repeat the payment again</string>
+    <string name="pending_error_1">Your payment is being processed. As soon as the transaction is processed, you will receive a message about the payment status</string>
+    <string name="order_again">Order again</string>
+    <string name="order_continue">Continue browsing</string>
+    <string name="anr_message">Sorry, had to wait a bit</string>
+    <string name="change_tarrif">Select a different tariff</string>
+    <string name="checkout_status">Please wait, order status is being checked...</string>
+    <string name="check_order_mes">Wait for order registration...</string>
 </resources>
