--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.753</string>
-    <string name="version">Версія: 1.753</string>
+    <string name="version_code">1.754</string>
+    <string name="version">Версія: 1.754</string>
 
     <string name="app_name">Таксі Доставка</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -378,4 +378,5 @@
     <string name="sent_cancel_message">Запит на скасування замовлення надіслано</string>
     <string name="aplay_card_message">Вашу картку прийнято та відправлено на перевірку. Скоро вона стане доступною для оплати подорожей.</string>
     <string name="status_checkout_message">Запитано оновлення статусу. Чекайте або уточніть оператора</string>
+    <string name="update_finish_mes">Оновлення завершено. Програма буде перезапущена.</string>
 </resources>
