--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.753</string>
-    <string name="version">Версия: 1.753</string>
+    <string name="version_code">1.754</string>
+    <string name="version">Версия: 1.754</string>
 
     <string name="app_name">Такси Доставка</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -379,4 +379,5 @@
     <string name="sent_cancel_message">Запрос на отмену заказа отправлен</string>
     <string name="aplay_card_message">Ваша карта принята и отправлена на проверку. Вскоре она станет доступной для оплаты поездок.</string>
     <string name="status_checkout_message">Запрошено обновление статуса. Ожидайте или уточните у оператора</string>
+    <string name="update_finish_mes">Обновление завершено. Приложение будет перезапущено.</string>
 </resources>
