--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.756</string>
-    <string name="version">Version: 1.756</string>
+    <string name="version_code">1.757</string>
+    <string name="version">Version: 1.757</string>
 
     <string name="app_name">Taxi Dostavka</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -377,4 +377,10 @@
     <string name="aplay_card_message">Your card has been accepted and sent for verification. It won\'t be possible for you to pay a higher price.</string>
     <string name="status_checkout_message">Status update requested. Wait or check with the operator</string>
     <string name="update_finish_mes">Update completed. The application will be restarted.</string>
+    <string name="udate_cancel">Update list</string>
+    <string name="order_to_cancel">Orders in progress</string>
+    <string name="order_status">Go to order</string>
+    <string name="order_to_cancel_review">Go to review</string>
+    <string name="order_to_cancel_true">You have scheduled trips</string>
+    <string name="no_house_vis_mes">The requested address was not found. Try something else or click the green back arrow button</string>
 </resources>
