--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,13 +1,10 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.759</string>
-    <string name="version">Версія: 1.759</string>
+    <string name="version_code">1.760</string>
+    <string name="version">Версія: 1.760</string>
 
     <string name="app_name">Таксі Доставка</string>
-    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
-    <string name="back4app_app_id">01YGF894m3NJRXT1BlH6qPo9pUfDlG9sqi9K9mIL</string>
-    <string name="back4app_client_key">T5f5GuT1UCmaiJn8Dek3sVmayGuJa2jfelQR6V6f</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -35,8 +32,7 @@
     <string name="make_rout">Створити маршрут</string>
     <string name="call_admin">Дзвонок оператору</string>
     <string name="email_friend">Розповісти другові</string>
-    <!--    <string name="default_web_client_id">356539267738-5bs72asrar11ud7ckcis68ophlnm3gfj.apps.googleusercontent.com</string>-->
-    <!--<string name="default_web_client_id">356539267738-0v3d1nsci9g7fij8cemnlid7cfalvdo2.apps.googleusercontent.com</string>-->
+
     <string name="my_phone">Мій телефон</string>
     <string name="open_maps">Замовити по мапе</string>
     <string name="driver">Робота водієм (реклама)</string>
@@ -89,7 +85,8 @@
     <string name="make_order_message">Здійсніть хоча б одну поїздку</string>
     <string name="to_adress_message">Куди їдемо?</string>
     <string name="coastMarkersMessage">"Вартість подорожі по маршруту "</string>
-    <string name="please_phone_message">Додаток передає номер Вашого мобільного телефону для включення функції замовлення таксі. Натиснувши кнопку Зберегти Ви підтверджуєте згоду на передачу номера телефону диспетчеру для пошуку автомобіля та збереження його для наступних замовлень.</string><string name="check_message">Чекайте, йде підключення.</string>
+    <string name="please_phone_message">Додаток передає номер Вашого мобільного телефону для включення функції замовлення таксі. Натиснувши кнопку Зберегти Ви підтверджуєте згоду на передачу номера телефону диспетчеру для пошуку автомобіля та збереження його для наступних замовлень.</string>
+    <string name="check_message">Чекайте, йде підключення.</string>
     <string name="find_of_map">Спробуйте знайти на карті</string>
     <string name="end_point_marker">Місце призначення</string>
     <string name="error_firebase_start">Помилка перевірки. Наберіть оператора через "ДОПОМОГУ"</string>
@@ -303,10 +300,15 @@
     <string name="hi_mes">Вас вітає</string>
     <string name="change_mes">Відсутні результати. Спробуйте змінити параметри пошуку</string>
     <string name="two_point_mes">2. Вкажіть місце висадки на карті</string>
-    <string name="gdpr0">Політика конфіденційності</string>
-    <string name="gdpr1">Ми цінуємо вашу довірливість та прагнемо забезпечити надійний захист ваших особистих даних. Ця політика конфіденційності пояснює, як ми збираємо, використовуємо та захищаємо ваші особисті дані в рамках використання нашої програми.</string>
-    <string name="gdpr2">Для забезпечення функціональності замовлення таксі у нашому додатку, ми збираємо та зберігаємо номери мобільних телефонів користувачів. Ці дані необхідні для зв\'язку з вами та забезпечення послуги замовлення таксі.</string>
-    <string name="gdpr3">Використовуючи нашу програму та надаючи нам свої особисті дані, ви висловлюєте свою згоду на збір, використання та передачу цих даних відповідно до цієї політики конфіденційності. Ми докладаємо всіх необхідних заходів для забезпечення безпеки ваших особистих даних та запобігання несанкціонованому доступу до них. Наш додаток дотримується положень Загального регламенту захисту персональних даних (GDPR) Європейського Союзу щодо збору, використання та обробки особистих даних. Ви маєте право в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Використовуючи нашу програму, ви погоджуєтесь з умовами нашої політики конфіденційності. Ми залишаємо за собою право вносити зміни до цієї політики, про що ви будете повідомлені. Ви маєте право в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Якщо у вас є додаткові запитання або запити щодо вашої конфіденційності та даних, будь ласка, зв\'яжіться з нами за вказаною нижче контактною адресою.</string>
+
+    <string name="gdpr0">Політика конфіденційності та\n Захист даних</string>
+    <string name="gdpr2">Ми цінуємо вашу довірливість і прагнемо забезпечити надійний захист ваших особистих даних. Ця політика конфіденційності пояснює, як ми збираємо, використовуємо та захищаємо ваші особисті дані в рамках використання нашої програми.</string>
+    <string name="gdbr3_0">Дані про електронну пошту користувача виходять через процес автентифікації за допомогою Firebase. Ця інформація використовується для ідентифікації та аутентифікації користувача у нашому додатку. Електронна пошта використовується для створення та керування обліковим записом користувача, забезпечення безпеки та відновлення доступу.</string>
+    <string name="gdpr3_1">Для забезпечення функціональності замовлення таксі в нашому додатку ми збираємо та зберігаємо номери мобільних телефонів користувачів. Ці дані необхідні для зв\'язку з вами та надання послуги замовлення таксі.</string>
+    <string name="gdpr3_2">Дані про пристрій користувача виходять через процес відправлення токена пристрою на захищений сервер із використанням Firebase. Ця інформація використовується для надсилання персональних пуш-повідомлень користувачі в нашому додатку. Прийом пуш-повідомлень можна самостійно вимкнути у налаштуваннях пристрою.</string>
+    <string name="gdpr3_3">Ми докладаємо всіх зусиль для забезпечення безпеки ваших даних. Вся інформація, включаючи електронну пошту та номер телефону, зберігається у зашифрованому вигляді та доступ до неї обмежений лише авторизованим співробітникам.</string>
+    <string name="gdpr3_4">Використовуючи нашу програму та надаючи нам свої особисті дані, ви висловлюєте свою згоду на збір, використання та передачу даних відповідно до цієї політики конфіденційності. Ми докладаємо всіх необхідних заходів для забезпечення безпеки ваших особистих даних та запобігання несанкціонованому доступу до них. Наш додаток дотримується положень Загального регламенту захисту персональних даних (GDPR) Європейського Союзу зі збирання, використання та обробки особистих даних. Ви можете в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього, зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Використовуючи нашу програму, ви погоджуєтесь з умовами нашої політики конфіденційності. Ми залишаємо за собою право вносити зміни до цієї політики, про що ви будете повідомлені. Ви можете в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього, зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Якщо у вас є додаткові запитання чи запити щодо конфіденційності та даних, будь ласка, зв\'яжіться з нами за вказаною нижче контактною адресою.</string>
+
     <string name="my_name">Андрій Коржов</string>
     <string name="conf">Конфіденційність</string>
     <string name="author_about">Про автора</string>
@@ -385,4 +387,6 @@
     <string name="order_to_cancel_review">Перейти до перегляду</string>
     <string name="order_to_cancel_true">У Вас є заплановані подорожі</string>
     <string name="no_house_vis_mes">Запитану адресу не знайдено. Спробуйте інший або натисніть зелену кнопку зі стрілкою "назад"</string>
+    <string name="no_adrees_mes">Уточніть адресу або наберіть операторів</string>
+
 </resources>
