--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,10 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.759</string>
-    <string name="version">Версия: 1.759</string>
+    <string name="version_code">1.760</string>
+    <string name="version">Версия: 1.760</string>
 
     <string name="app_name">Такси Доставка</string>
-    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
-    <string name="back4app_app_id">01YGF894m3NJRXT1BlH6qPo9pUfDlG9sqi9K9mIL</string>
-    <string name="back4app_client_key">T5f5GuT1UCmaiJn8Dek3sVmayGuJa2jfelQR6V6f</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -34,10 +31,9 @@
     <string name="action_exit">Выход</string>
     <string name="delete_record">удалить?</string>
     <string name="make_rout">Создать маршрут</string>
-    <string name="call_admin">Вызов оператору</string>
+    <string name="call_admin">Вызов оператора</string>
     <string name="email_friend">Рассказать другу</string>
-    <!-- <string name="default_web_client_id">356539267738-5bs72asrar11ud7ckcis68ophlnm3gfj.apps.googleusercontent.com</string>-->
-    <!--<string name="default_web_client_id">356539267738-0v3d1nsci9g7fij8cemnlid7cfalvdo2.apps.googleusercontent.com</string>-->
+
     <string name="my_phone">Мой телефон</string>
     <string name="open_maps">Заказать по карте</string>
     <string name="driver">Работа водителем (реклама)</string>
@@ -90,7 +86,8 @@
     <string name="make_order_message">Совершите хотя бы одну поездку</string>
     <string name="to_adress_message">Куда едем?</string>
     <string name="coastMarkersMessage">"Стоимость путешествия по маршруту"</string>
-    <string name="please_phone_message">Приложение передает номер вашего мобильного телефона для включения функции заказа такси. Нажав кнопку Сохранить Вы подтверждаете согласие на передачу телефонного номера диспетчеру для поиска автомобиля и сохранения его для следующих заказов.</string><string name="check_message">Ждите, идет подключение.</string>
+    <string name="please_phone_message">Без ввода номера телефона заказ невозможен. Приложение передает номер вашего мобильного телефона для включения функции заказа такси. Нажав кнопку Сохранить Вы подтверждаете согласие на передачу телефонного номера диспетчеру для поиска автомобиля и сохранения его для следующих заказов.</string>
+    <string name="check_message">Ждите, идет подключение.</string>
     <string name="find_of_map">Попробуйте найти на карте</string>
     <string name="end_point_marker">Место назначения</string>
     <string name="error_firebase_start">Ошибка проверки. Наберите оператора через "ПОМОЩЬ"</string>
@@ -300,14 +297,19 @@
     <string name="city_cherkasy"> г.Черкассы</string>
     <string name="tail1">Карты для города \'</string>
     <string name="tail2">\' успешно загружены</string>
-    <string name="rout_fin">Выбирите из списка номер дома</string>
+    <string name="rout_fin">Выберите из списка номер дома</string>
     <string name="hi_mes">Вас приветствует</string>
     <string name="change_mes">Отсуствуют результаты. Попробуйте изменить параметры поиска</string>
     <string name="two_point_mes">Укажите на карте место высадки</string>
-    <string name="gdpr0">Политика конфиденциальности</string>
-    <string name="gdpr1">Мы ценим вашу доверчивость и стремимся обеспечить надежную защиту ваших личных данных. Эта политика конфиденциальности объясняет, как мы собираем, используем и защищаем ваши личные данные в рамках использования нашей программы.</string>
-    <string name="gdpr2">Для обеспечения функциональности заказа такси в нашем приложении мы собираем и храним номера мобильных телефонов пользователей. Эти данные необходимы для связи с вами и предоставления услуги заказа такси.</string>
-    <string name="gdpr3">Используя нашу программу и предоставляя нам свои личные данные, вы выражаете свое согласие на сбор, использование и передачу данных в соответствии с этой политикой конфиденциальности. Мы прилагаем все необходимые меры для обеспечения безопасности ваших личных данных и предотвращения несанкционированного доступа к ним. Наше приложение придерживается положений Общего регламента защиты персональных данных (GDPR) Европейского Союза по сбору, использованию и обработке личных данных. Вы вправе в любое время запросить доступ к вашим личным данным, внести изменения или удалить их из нашей базы данных. Для этого свяжитесь с нами по адресу taxi.easy.ua@gmail.com. Используя нашу программу, вы согласны с условиями нашей политики конфиденциальности. Мы оставляем за собой право вносить изменения в эту политику, о чем вы будете уведомлены. Вы вправе в любое время запросить доступ к вашим личным данным, внести изменения или удалить их из нашей базы данных. Для этого свяжитесь с нами по адресу taxi.easy.ua@gmail.com. Если у вас есть дополнительные вопросы или запросы относительно конфиденциальности и данных, пожалуйста, свяжитесь с нами по указанному ниже контактному адресу.</string>
+
+    <string name="gdpr0">Политика конфиденциальности и \n Защита данных</string>
+    <string name="gdpr2">Мы ценим вашу доверчивость и стремимся обеспечить надежную защиту ваших личных данных. Эта политика конфиденциальности объясняет, как мы собираем, используем и защищаем ваши личные данные в рамках использования нашей программы.</string>
+    <string name="gdbr3_0">Данные об электронной почте пользователя получаются через процесс аутентификации с использованием Firebase. Эта информация используется для идентификации и аутентификации пользователя в нашем приложении. Электронная почта используется для создания и управления учетной записью пользователя, обеспечения безопасности и восстановления доступа.</string>
+    <string name="gdpr3_1">Для обеспечения функциональности заказа такси в нашем приложении мы собираем и храним номера мобильных телефонов пользователей. Эти данные необходимы для связи с вами и предоставления услуги заказа такси.</string>
+    <string name="gdpr3_2">Данные об устройстве пользователя получаются через процесс отправки токена устройства на защищенный сервер с использованием Firebase. Эта информация используется для отправке персональных пуш-уведомлений пользователи в нашем приложении. Прием пуш-уведомдений можно самостоятельно отключить в настройках устройства.</string>
+    <string name="gdpr3_3">Мы прилагаем все усилия для обеспечения безопасности ваших данных. Вся информация, включая электронную почту и номер телефона, хранится в зашифрованном виде и доступ к ней ограничен только авторизованным сотрудникам.</string>
+    <string name="gdpr3_4">Используя нашу программу и предоставляя нам свои личные данные, вы выражаете свое согласие на сбор, использование и передачу данных в соответствии с этой политикой конфиденциальности. Мы прилагаем все необходимые меры для обеспечения безопасности ваших личных данных и предотвращения несанкционированного доступа к ним. Наше приложение придерживается положений Общего регламента защиты персональных данных (GDPR) Европейского Союза по сбору, использованию и обработке личных данных. Вы вправе в любое время запросить доступ к вашим личным данным, внести изменения или удалить их из нашей базы данных. Для этого свяжитесь с нами по адресу taxi.easy.ua@gmail.com. Используя нашу программу, вы согласны с условиями нашей политики конфиденциальности. Мы оставляем за собой право вносить изменения в эту политику, о чем вы будете уведомлены. Вы вправе в любое время запросить доступ к вашим личным данным, внести изменения или удалить их из нашей базы данных. Для этого свяжитесь с нами по адресу taxi.easy.ua@gmail.com. Если у вас есть дополнительные вопросы или запросы относительно конфиденциальности и данных, пожалуйста, свяжитесь с нами по указанному ниже контактному адресу.</string>
+
     <string name="my_name">Андрей Коржов</string>
     <string name="conf">Конфеденциальность</string>
     <string name="author_about">Об авторе</string>
@@ -386,4 +388,5 @@
     <string name="order_to_cancel_review">Перейти к просмотру</string>
     <string name="order_to_cancel_true">У Вас есть запланированные поездки</string>
     <string name="no_house_vis_mes">Запрошенный адрес не найден. Попробуйте дргуой или нажмите зеленую кнопку со стрелкой "назад"</string>
+    <string name="no_adrees_mes">Уточните адрес или наберите операторов</string>
 </resources>
